--- a/src/Components/projects.css
+++ b/src/Components/projects.css
@@ -37,15 +37,17 @@ h1 {
 }
 
 h2 {
+  text-decoration: underline;
   font-size: 1.1rem;
   font-weight: 600;
   margin-top: 10px;
 }
 
 h3 {
-  max-width: 70%;
+  max-width: 80%;
   margin-left: auto;
   margin-right: auto;
+  text-align: left;
 }
 
 h4 {
@@ -75,7 +77,7 @@ p {
   color: #ffffff;
   text-decoration: underline;
   background-color: #efdac7;
-  background-color: #3b3b3b;
+  background-color: black;
   font-size: 0.7rem;
   height: 40px;
   border-radius: 25px;
@@ -91,31 +93,31 @@ p {
   background-color: #e5ccc9;
   background-color: #99755c;
   background-color: #e1b19b;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.header a {
-  padding: 15px;
-  font-size: 1.5rem;
 }
 
 .header h1,
-.header h3,
 .header h2,
+.header h3,
+.header p {
+  padding: 20px;
+}
+
 .header a {
-  color: #3b3b3b;
+  padding: 15px 30px 15px 0;
+  font-size: 1.5rem;
+  color: black;
+}
+
+.header .icons {
+  max-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
 }
 
 .header h3 {
-  font-size: 1rem;
+  font-size: 1.1rem;
+  font-style: italic;
 }
 
 .project {
@@ -157,30 +159,7 @@ p {
   opacity: 100%;
 }
 
-.project h2 {
-  text-decoration: underline;
-  font-size: 1.5rem;
-}
-
 @media screen and (min-width: 860px) {
-  .header h1,
-  .header h2,
-  .header h3,
-  .header p {
-    padding: 20px;
-    text-align: left;
-  }
-  .header h2 {
-    max-width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .header .icons {
-    max-width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-  }
   .project {
     height: 300px;
     width: 80vw;
@@ -206,12 +185,8 @@ p {
     width: 160%;
     z-index: 100;
   }
-  .project .container-left h2 {
-    font-weight: 600;
-  }
   .project .container-2 {
     width: 50%;
-    background-color: antiquewhite;
     -ms-flex-line-pack: center;
         align-content: center;
   }
@@ -220,127 +195,21 @@ p {
     min-width: 100%;
     -o-object-fit: cover;
        object-fit: cover;
-    overflow: hidden;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 0;
-  }
-  .project .container-2 img:hover {
-    opacity: 100%;
   }
   .project h2,
   .project p,
   .project h4 {
     padding-left: 0;
+    margin: 0;
   }
   .project h2 {
     font-size: 1.7rem;
-  }
-  .project p,
-  .project h4 {
-    margin: 0;
   }
   .project .container-3 {
     width: 20%;
     text-align: right;
     -ms-flex-item-align: end;
         align-self: flex-end;
-  }
-}
-
-@media screen and (min-width: 1050px) {
-  .project h2 {
-    font-size: 1.7rem;
-  }
-}
-
-.wave {
-  -webkit-animation-name: wave-animation;
-          animation-name: wave-animation;
-  /* Refers to the name of your @keyframes element below */
-  -webkit-animation-duration: 2.1s;
-          animation-duration: 2.1s;
-  /* Change to speed up or slow down */
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  /* Never stop waving :) */
-  -webkit-transform-origin: 70% 70%;
-          transform-origin: 70% 70%;
-  /* Pivot around the bottom-left palm */
-  display: inline-block;
-}
-
-@-webkit-keyframes wave-animation {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  10% {
-    -webkit-transform: rotate(14deg);
-            transform: rotate(14deg);
-  }
-  /* The following five values can be played with to make the waving more or less extreme */
-  20% {
-    -webkit-transform: rotate(-8deg);
-            transform: rotate(-8deg);
-  }
-  30% {
-    -webkit-transform: rotate(14deg);
-            transform: rotate(14deg);
-  }
-  40% {
-    -webkit-transform: rotate(-4deg);
-            transform: rotate(-4deg);
-  }
-  50% {
-    -webkit-transform: rotate(10deg);
-            transform: rotate(10deg);
-  }
-  60% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  /* Reset for the last half to pause */
-  100% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-}
-
-@keyframes wave-animation {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  10% {
-    -webkit-transform: rotate(14deg);
-            transform: rotate(14deg);
-  }
-  /* The following five values can be played with to make the waving more or less extreme */
-  20% {
-    -webkit-transform: rotate(-8deg);
-            transform: rotate(-8deg);
-  }
-  30% {
-    -webkit-transform: rotate(14deg);
-            transform: rotate(14deg);
-  }
-  40% {
-    -webkit-transform: rotate(-4deg);
-            transform: rotate(-4deg);
-  }
-  50% {
-    -webkit-transform: rotate(10deg);
-            transform: rotate(10deg);
-  }
-  60% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  /* Reset for the last half to pause */
-  100% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
   }
 }
 /*# sourceMappingURL=projects.css.map */
